Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -100,10 +100,12 @@
               </article>
 
               <article>
-                <a href="#" class="image"><img src="images/covid19.jpg" alt="" /></a>
-                <h3 class="major">COVID-19 Analysis</h3>
-                <p>Analyzed COVID-19 data to understand trends, case growth, and outbreak patterns using Python and data visualization tools.</p>
-                <a href="#" class="special">View Project</a>
+                <a href="#" class="image"><img src="images/webscraping.jpg" alt="" /></a>
+                <h3 class="major">WIKIPEDIA DATA EXTRACTION PROJECT</h3>
+                <p>Created a Python project where I scraped real company data from Wikipedia using BeautifulSoup and Requests.
+					I cleaned and structured the raw HTML table into a proper dataset using Pandas, removing formatting issues and converting it into usable information.
+					This project gave me hands-on experience with collecting web data, handling messy text, and preparing it for analysis in a clear, organized way..</p>
+                <a href="https://github.com/hadhi121/python-projects/blob/main/Web_scraping.ipynb" class="special">View Project</a>
               </article>
 
             </section>
@@ -185,4 +187,5 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
