--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               </article>
 
               <article>
-                <a href="#" class="image"><img src="images/webscraping.jpg" alt="" /></a>
+                <a href="#" class="image"><img src="images/webscrape.png" alt="" /></a>
                 <h3 class="major">WIKIPEDIA DATA EXTRACTION PROJECT</h3>
                 <p>Created a Python project where I scraped real company data from Wikipedia using BeautifulSoup and Requests.
 					I cleaned and structured the raw HTML table into a proper dataset using Pandas, removing formatting issues and converting it into usable information.
@@ -187,5 +187,6 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
