Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -153,6 +153,78 @@
         </section>
 
       </section>
+		  <section id="resume-cert-section" class="wrapper alt style2">
+  <div class="inner">
+
+    <h2 class="major" 
+        style="font-size: 1.6rem; margin-bottom: 25px; border-bottom: 2px solid #fff; display: inline-block; color: #fff;">
+      RESUME & CERTIFICATIONS
+    </h2>
+
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px; margin-top: 30px;">
+
+      <!-- Resume Block -->
+      <div style="text-align: center; color: #fff;">
+        <button style="
+          padding: 12px 28px;
+          background-color: rgba(255,255,255,0.05);
+          color: #fff;
+          font-weight: 600;
+          border: 1px solid rgba(255,255,255,0.3);
+          border-radius: 10px;
+          cursor: pointer;
+          transition: 0.3s;
+          margin-bottom: 15px;
+          box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+        "
+        onmouseover="this.style.backgroundColor='rgba(255,255,255,0.15)'"
+        onmouseout="this.style.backgroundColor='rgba(255,255,255,0.05)'"
+        onclick="window.open('YOUR_CV_LINK_HERE', '_blank')">
+          Download Resume (PDF)
+        </button>
+
+        <br>
+
+        <img src="images/cv-qrcode.png" 
+          alt="CV QR Code"
+          style="width: 150px; height: 150px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.4); margin-top: 10px;">
+        
+        <p style="margin-top: 8px; color: #ccc;">Scan to Access CV</p>
+      </div>
+
+      <!-- Certifications Block -->
+      <div style="text-align: center; color: #fff;">
+        <button style="
+          padding: 12px 28px;
+          background-color: rgba(255,255,255,0.05);
+          color: #fff;
+          font-weight: 600;
+          border: 1px solid rgba(255,255,255,0.3);
+          border-radius: 10px;
+          cursor: pointer;
+          transition: 0.3s;
+          margin-bottom: 15px;
+          box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+        "
+        onmouseover="this.style.backgroundColor='rgba(255,255,255,0.15)'"
+        onmouseout="this.style.backgroundColor='rgba(255,255,255,0.05)'"
+        onclick="window.open('YOUR_CERTIFICATES_FOLDER_LINK', '_blank')">
+          View Certifications
+        </button>
+
+        <br>
+
+        <img src="images/cert-qrcode.png" 
+          alt="Certifications QR Code"
+          style="width: 150px; height: 150px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.4); margin-top: 10px;">
+        
+        <p style="margin-top: 8px; color: #ccc;">Scan to View Certificates</p>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
       <!-- Footer -->
       <section id="footer">
@@ -187,6 +259,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
