--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         </section>
 
       </section>
-		  <section id="resume-cert-section" class="wrapper alt style2">
+		  <section id="resume-cert-section" class="wrapper style2">
   <div class="inner">
 
     <h2 class="major" 
@@ -259,6 +259,7 @@
     <script src="assets/js/main.js"></script>
   </body>
 </html>
+
 
 
 
